<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#000000"
    tools:context="io.github.freefalltech.blackout.OpenerActivity">

    <ImageView
        android:id="@+id/bolt_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30sp"
        android:src="@drawable/bolt_image" />


    <TextView
        android:id="@+id/heroText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/hero_title"
        android:layout_marginTop="60dp"
        android:textColor="#ffffff"
        android:textSize="60sp"
        android:layout_below="@+id/bolt_img"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/subTextId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_centerInParent="true"
        android:paddingTop="100dp"
        android:layout_below="@+id/heroText"
        android:layout_margin="30sp"
        android:layout_marginTop="48dp"
        android:text="@string/subtextOpener"
        android:textAlignment="center"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/subTextId"
        android:layout_centerHorizontal="true"
        android:onClick="startBlackout"
        app:cardBackgroundColor="#ffffff"
        android:id="@+id/cardView">

        <android.support.v7.widget.CardView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_below="@+id/subTextId"
            app:cardBackgroundColor="@color/colorPrimaryDark">

            <TextView
                android:layout_margin="5dp"
                android:layout_width="wrap_content"
                android:textSize="20sp"
                android:layout_height="wrap_content"
                android:textColor="#ffffff"
                android:text="@string/enable_blackout" />
        </android.support.v7.widget.CardView>
    </android.support.v7.widget.CardView>

</RelativeLayout>
